[tool.poetry]
name = "openstates-legislators"
version = "1.0.0"
description = ""
authors = ["James Turk <james@openstates.org>"]

[tool.poetry.dependencies]
python = "^3.6"
pyyaml = "^3.13"
click = "^7.0"
yamlordereddictloader = "^0.4.0"
opencivicdata = "^2.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.6"
pytest = "^4.0"
pytest-django = "^3.4"
pytest-cov = "^2.6"
coveralls = "^1.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
